<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:padding="3dp"
        android:text="@string/dailyAvarage" />

    <EditText
        android:id="@+id/etAveragePower"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/dailyAvarage"
        android:layout_marginBottom="20dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:padding="3dp"
        android:text="@string/sigma" />

    <EditText
        android:id="@+id/etSigma1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/sigma"
        android:layout_marginBottom="20dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:padding="3dp"
        android:text="@string/price" />

    <EditText
        android:id="@+id/etElectricityCost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/price"
        android:layout_marginBottom="20dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:padding="3dp"
        android:text="@string/precision" />

    <EditText
        android:id="@+id/etDelta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/precision"
        android:layout_marginBottom="20dp" />

    <Button
        android:id="@+id/btnCalculate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/calculate" />

    <TextView
        android:id="@+id/tvResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="19sp"
        android:text="@string/resultPlaceholder"
        android:paddingTop="16dp" />

</LinearLayout>
